[workspace]
resolver = "2"
members = [
    "contracts/learn-token",
    "contracts/credential-nft",
    "contracts/progress-tracker",
    "packages/shared",
]

[workspace.dependencies]
soroban-sdk = "21.0.0"
soroban-token-sdk = "21.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.dev]
overflow-checks = false
